--- a/pages/galveston.html
+++ b/pages/galveston.html
@@ -36,6 +36,12 @@
           <li class="nav-item">
             <a class="nav-link" href="/pages/galveston.html">Galveston <span class="sr-only">(current)</span></a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/pages/mocity.html">Missouri City </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/pages/jcgm.html">Jones Creek/Grand Mission </a>
+          </li>
           
       </ul>
     </div>
@@ -87,7 +93,43 @@
             <div class="weekPart">
                      <div class="email">
                     <p>
-
+                      Buenos dias familia y amigos
+                      <br><br>
+                       This week seemed really long with a lot of new and unfamiliar places  and people.
+                       <br><br>
+                       Monday, I left Sealy and came to Galveston! My new companion is named  Hermana Koopmans and she is awesome! She is 6 weeks behind me in the  mission and she has been here in Galveston for about 3 months. She is  from Enterprise, Utah.
+                       <br><br>
+                       Here in Galveston we teach A LOT of lessons! This week we taught 21  lessons! I don't think I've taught 21 lessons in a week since I was  back in Manvel. There are a lot of people here. I think the population  is somewhere around 50,000. It is a BIG difference compared to all the  small towns in my last area. The town of Sealy only had a population  of 6,019.
+                       <br><br>
+                       You'd think we'd be able to see the ocean every day, since we live on  an island, but we can't... We aren't allowed to drive on Seawall  Boulevard and that road is built up a lot higher than the rest of the  island and it blocks the view of the ocean. But sometimes in the  mornings we can hear the waves crashing when we go out to exercise.
+                       <br><br>
+                       We have a friend named Julianna here who is on date to be baptized!  She is 13 and we have been reading the Book of Mormon with her every  night. She has grown spiritually so much since the Sisters started  teaching her.
+                       <br><br>
+                       On Tuesday when I woke up, I didn't know where I was. I expected to be  in the apartment in Sealy, but I was here in Galveston. It was scary lol.
+                       <br><br>
+                       Our district here only has 6 missionaries. Elder Teeples, Elder  Peterson, Elder Parker, Elder Ferrin, Hermana Koopmans, and me. Elder  Peterson is our district leader and he only has 6 months in the  mission! He was at BYU last year and he is a Computer Science major  too so we were trying to figure out if we ever saw eachother there but  we haven't figured anything out yet.
+                       <br><br>
+                       Hermana Koopmans is a Sister Training Leader this transfer so I got to  go on exchanges with Sister Stephens on Friday and Saturday. It was  pretty boring. We sent a lot of texts and walked around a park for a  long time and didn't talk to too many people. But we got Pho for lunch  so it was all good!
+                       <br><br>
+                       The ward here in Galveston is half english and half spanish just like  the one in Sealy. At church, I got up and shared my testimony in  Spanish and then everyone was really impressed and thought that I was  from Mexico. That happens a lot lol.
+                       <br><br>
+                       We found 3 new people to teach this week! Our goal is to find 20 new  people to teach this transfer (in the next 6 weeks) and we want to  baptize at least 1 person in the next 2 transfers. Julianna is well on  her way to her date of February 13th. We just haven't gotten a clear  answer from her dad whether we have his permission... hopefully he is  fine with it.
+                       <br><br>
+                       Spiritual thought:
+                       <br><br>
+                       Doctrine and Covenants 1:28
+                       <br><br>
+                       28 And inasmuch as they were humble they might be made strong, and  blessed from on high, and receive knowledge from time to time.
+                       <br><br>
+                       This scripture is talking about how Latter-Day Prophets and Apostles  can receive revelation, but it applies to all of us too. If we humble  ourselves and allow the Atonement and Grace of Jesus Christ to work in  our lives, we can be made strong, be blessed, and receive personal  revelation to help us with decisions we have to make and other things  that are going on in our lives!
+                       <br><br>
+                       I know that Christ lives and that we have a living prophet today! I  know that the Book of Mormon is true!
+                       <br><br>
+                       Les quiero
+                       <br><br>
+                       Love y'all
+                       <br><br><br>
+                       Hermana Barton
                     </p>
                 </div>
             </div>
@@ -123,6 +165,8 @@
     <a href="manvel.html"> Manvel </a>
     <a href="sealy.html"> Sealy </a>
     <a href="galveston.html"> Galveston </a>
+    <a href="mocity.html">Missouri City</a>
+    <a href="jcgm.html">Jones Creek/Grand Mission</a>
   </footer>
 
 
