--- a/pages/galvestonWeeks/week45.html
+++ b/pages/galvestonWeeks/week45.html
@@ -36,6 +36,12 @@
           <li class="nav-item">
             <a class="nav-link" href="/pages/galveston.html">Galveston <span class="sr-only">(current)</span></a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/pages/mocity.html">Missouri City </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/pages/jcgm.html">Jones Creek/Grand Mission </a>
+          </li>
           
       </ul>
     </div>
@@ -69,7 +75,37 @@
             <div class="weekPart">
                      <div class="email">
                     <p>
-
+                      Buenos dias!
+                      <br><br>
+                       Time never stops!
+                       <br><br>
+                       Last Monday the district got together and played Settlers of Catan  outside the church building. It was freezing and so I was all bundled  up lol. Settlers of Catan is my mom's favorite game and she always  wins. But I won with my district! It's all about who has that "Longest  Road" card.
+                       <br><br>
+                       We had an apartment inspection on Tuesday. It was the first one I've  ever had on my mission for a variety of reasons. We got 100% :)
+                       <br><br>
+                       Thursday we had zone conference! We drove all the way out to  Sugarland. During the conference we talked about how to develop desire  and how to become more converted. President Guthrie asked us if he  told us that there was a million dollars in the church building if we  would ever stop looking for it. We obviously said no. He said that we  should be looking for new people to teach with that same vigor.  Everyone was joking about the briefcase with a million dollars in it  the rest of the conference lol.
+                       <br><br>
+                       After the conference, our district had interviews since we live so far  from the mission office. I talked to President about how I can try not  to think about all the stuff I'm going to do when I get home and focus  more on the work I'm trying to do here. He told me that I should try  not to talk about it, since my companions will probably just make it  worse lol.
+                       <br><br>
+                       We exchanged after the conference and I spent Friday with Sister  Stephans again in Clear Lake. We taught a few people and went to  Chick-fil-a for lunch.
+                       <br><br>
+                       Saturday we brought a bouquet of flowers to our friend Jenny because  it was her birthday! She is a fairly new person that we are teaching  and she is Spanish speaking! She is so cute and she said that the  missionaries lived in her same building when she lived in the  Dominican Republic! We gave her a Libro de Mormon.
+                       <br><br>
+                       Sunday we got our friends Syd, Fredrick, and Julianna to church. Terry  and Jenny watched the broadcast online! We showed Julianna the  baptismal font where she will be baptized in a few weeks! She is  really excited.
+                       <br><br>
+                       Spiritual Thought:
+                       <br><br>
+                       Matthew 25:40
+                       <br><br>
+                       40 And the King shall answer and say unto them, Verily I say unto you,  Inasmuch as ye have done it unto one of the least of these my  brethren, ye have done it unto me
+                       <br><br>
+                       We had a relief society class over Zoom on Sunday and they talked  about Ministering! This scripture was shared and I reallly liked it. I  hope that when I return home that I can try to be a great minister to  people in my family and those in my ward, just like I try to minister  to those here in the ward and those that I am teaching. Remember that  everyone is a child of God and He cares for them and is very thankful  when we serve others.
+                       <br><br>
+                       Les quiero
+                       <br><br>
+                       Love y'all
+                       <br><br><br>
+                       Hermana Barton
                     </p>
                 </div>
             </div>
@@ -95,7 +131,7 @@
 </div>
 
 
-  <footer>
+ <footer>
     <a style="margin-right: auto;" href="https://github.com/lucymbarton/creative-project-1">Github</a>
     <a href="/index.html">Home </a>
     <a href="mtc.html"> MTC </a>
@@ -103,6 +139,8 @@
     <a href="manvel.html"> Manvel </a>
     <a href="sealy.html"> Sealy </a>
     <a href="galveston.html"> Galveston </a>
+    <a href="mocity.html">Missouri City</a>
+    <a href="jcgm.html">Jones Creek/Grand Mission</a>
   </footer>
 
 
