--- a/pages/galvestonWeeks/week46.html
+++ b/pages/galvestonWeeks/week46.html
@@ -36,6 +36,12 @@
           <li class="nav-item">
             <a class="nav-link" href="/pages/galveston.html">Galveston <span class="sr-only">(current)</span></a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/pages/mocity.html">Missouri City </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/pages/jcgm.html">Jones Creek/Grand Mission </a>
+          </li>
           
       </ul>
     </div>
@@ -69,7 +75,44 @@
             <div class="weekPart">
                      <div class="email">
                     <p>
-
+                      Buenos días! 
+                      <br><br>
+                      This week I have been SO tired and stressed lol but that's just the life of a missionary sometimes. 
+                      <br><br>
+                      Last Monday we went to Target with the district and then Waffle House and then we played some weird game at the tennis court with a playground ball. It didn't really work out lol. 
+                      <br><br>
+                      Tuesday we were walking around near a park and this guy on a bike rode up to us and started asking about our church! That never happens lol. His name was Jose Martinez and he seemed interested but hasn't called us. 
+                      <br><br>
+                      Wednesday was district council and Elder Peterson made us all say what our spirit animals was. We went and taught our friend Jenny again. She really likes what we share and she was able to watch church again on the broadcast this Sunday. She said her husband isn't very religious, but maybe we will be able to get him on a lesson sometime hopefully! 
+                      <br><br>
+                      Thursday we had correlation with our Ward Mission Leader, Brother Gariby. It was my first correlation with him since usually the meeting happens on Friday and we are usually on exchanges. But my companion and the elders said he usually just asks us why nobody has been baptized yet. But we missionaries discussed beforehand how we could make the meeting more effective and it didn't turn out so bad! 
+                      <br><br>
+                      Friday we had exchanges. Sister Peterson came here to Galveston and Hermana Koopmans went to Clear Lake. We had a million lessons but a few of them fell through so it turned out to be a good day. We got Subway for dinner. And I did 3 handstands against the wall! 
+                      <br><br>
+                      Saturday we went to the garden called Seeding Galveston and helped pick some peas and feed the animals. Elder Peterson got the chickens to eat out of his hand. Then we exchanged companions again and went to lunch at an Italian place. 
+                      <br><br>
+                      Hermana Koopmans and I got to attend Karianna's baptism, who is somebody the Texas City elders have been teaching. Julianna came and watched it too! They asked us last minute to teach the restoration while the people who got baptized were changing. It went well. 
+                      <br><br>
+                      Then we got to go visit a woman in our ward who lives on a ship that is docked off of Pelican Island! It was so cool. She gave us a tour of the ship and it reminded me of Star Trek. Then she let us take a bunch of food from the ship's stores that was just sitting there! 
+                      <br><br>
+                      That night, Sister Sunseri, who we help to make the programs for sacrament meeting, got us ice cream cones from McDonald's. It was a busy day. 
+                      <br><br>
+                      Sunday we got Julianna, Syd, and Kimberly to church in person. Jenny watched online. Sunday night we got to go to Julianna's house and get her dad to help us fill out her baptismal record form. This is really happening!! We are so excited!! 
+                      <br><br>
+                      Spiritual Thought:
+                      <br><br>
+                      Alma 5:7-8
+                      <br><br>
+                      7 Behold, he changed their hearts; yea, he awakened them out of a deep sleep, and they awoke unto God. Behold, they were in the midst of darkness; nevertheless, their souls were illuminated by the light of the everlasting word; yea, they were encircled about by the bands of death, and the chains of hell, and an everlasting destruction did await them.
+                      8 And now I ask of you, my brethren, were they destroyed? Behold, I say unto you, Nay, they were not. 
+                      <br><br>
+                      I like these scriptures because as I have been able to study the Book of Mormon and the Bible so much on my mission, I feel like I have awoken (is that a word?) unto God and his reality. I cannot believe that I lived for 19 years and didn't understand or comprehend the stories in the Book of Mormon and in the Bible. I will be forever grateful for the time that I have on my mission to study and ponder. 
+                      <br><br>
+                      Les quiero
+                      <br><br>
+                      Love y'all! 
+                      <br><br><br>
+                      Hermana Barton
                     </p>
                 </div>
             </div>
@@ -95,7 +138,7 @@
 </div>
 
 
-  <footer>
+ <footer>
     <a style="margin-right: auto;" href="https://github.com/lucymbarton/creative-project-1">Github</a>
     <a href="/index.html">Home </a>
     <a href="mtc.html"> MTC </a>
@@ -103,6 +146,8 @@
     <a href="manvel.html"> Manvel </a>
     <a href="sealy.html"> Sealy </a>
     <a href="galveston.html"> Galveston </a>
+    <a href="mocity.html">Missouri City</a>
+    <a href="jcgm.html">Jones Creek/Grand Mission</a>
   </footer>
 
 
