--- a/pages/galvestonWeeks/week47.html
+++ b/pages/galvestonWeeks/week47.html
@@ -36,6 +36,12 @@
           <li class="nav-item">
             <a class="nav-link" href="/pages/galveston.html">Galveston <span class="sr-only">(current)</span></a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/pages/mocity.html">Missouri City </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/pages/jcgm.html">Jones Creek/Grand Mission </a>
+          </li>
           
       </ul>
     </div>
@@ -69,6 +75,40 @@
             <div class="weekPart">
                      <div class="email">
                     <p>
+                      Buenos días!
+                      <br><br>
+                       This week was crazy lol.
+                       <br><br>
+                       Last Monday we had Sisters p day and all the sisters in the zone came  out to the island to play pickleball and go to Salsas! Somehow I am  the tallest sister in the zone. I'm only 5 foot 6.
+                       <br><br>
+                       Tuesday we had a great devotional by President Peterson who is the  branch president of the Alvin Branch.
+                       <br><br>
+                       Wednesday we had district council about being converted and the  Atonement of Jesus Christ.
+                       <br><br>
+                       These members in our ward have a snack shack and they let us have free  food so we got some street tacos and and horchata and mangonada and  fresas y crema. It was so good!
+                       <br><br>
+                       Julianna had her baptismal interview this Saturday!! And she passed!  Elder Peterson said that he wholeheartedly reccomended her for  baptism! And he was annoyed that we told Julianna that he was a dork lol.
+                       <br><br>
+                       We got a few referrals this week! One of them was a lady named Katya.  She is 8 months pregnant, 25 years old, and speaks 3 different  languages and she is homeless... She came to church this Sunday and  she kept whispering to us about how much she was crushing on Elder  Peterson 😅 The members want to help her out but I'm not sure how  interested she is in the gospel. She said she wanted to be a  missionary so she could have an apartment...
+                       <br><br>
+                       Hermana Koopmans was driving and we ran into a cardboard box full of  heavy equipment and it ripped a plastic part off of our car and then  one of our tires was bulging. So we are at Firestone right now.
+                       <br><br>
+                       Spiritual thought :
+                       <br><br>
+                       Alma 13:8-9
+                       8 Now they were ordained after this manner—being called with a holy  calling, and ordained with a holy ordinance, and taking upon them the  high priesthood of the holy order, which calling, and ordinance, and  high priesthood, is without beginning or end—
+                       9 Thus they become high priests forever, after the order of the Son,  the Only Begotten of the Father, who is without beginning of days or  end of years, who is full of grace, equity, and truth. And thus it is.  Amen.
+                       <br><br>
+                       I thought these verses were really interesting! They are saying that  prophets are types of Christ. I think about all of the prophets who  testified and we persecuted, just like Christ was when he was on the  earth. I think of Alma and Amulek when they were in prison, I think of  Noah who the people didn't listen to, and I think of Joseph Smith who  was martyred for the Gospel, similar to Jesus.
+                       <br><br>
+                       Pretty interesting.
+                       <br><br>
+                       Les quiero
+                       <br><br>
+                       Love yall
+                       <br><br><br>
+                       Hermana Barton
+
 
                     </p>
                 </div>
@@ -95,7 +135,7 @@
 </div>
 
 
-  <footer>
+ <footer>
     <a style="margin-right: auto;" href="https://github.com/lucymbarton/creative-project-1">Github</a>
     <a href="/index.html">Home </a>
     <a href="mtc.html"> MTC </a>
@@ -103,6 +143,8 @@
     <a href="manvel.html"> Manvel </a>
     <a href="sealy.html"> Sealy </a>
     <a href="galveston.html"> Galveston </a>
+    <a href="mocity.html">Missouri City</a>
+    <a href="jcgm.html">Jones Creek/Grand Mission</a>
   </footer>
 
 
