--- a/pages/galvestonWeeks/week48.html
+++ b/pages/galvestonWeeks/week48.html
@@ -36,6 +36,12 @@
           <li class="nav-item">
             <a class="nav-link" href="/pages/galveston.html">Galveston <span class="sr-only">(current)</span></a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/pages/mocity.html">Missouri City </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/pages/jcgm.html">Jones Creek/Grand Mission </a>
+          </li>
           
       </ul>
     </div>
@@ -69,7 +75,34 @@
             <div class="weekPart">
                      <div class="email">
                     <p>
-
+                      Buenos Días! 
+                      <br><br>
+                      Another week and another transfer gone! I am now starting my eighth transfer as a full-time missionary! Hermana Koopmans and I are both staying here in Galveston for another 6 weeks. 
+                      <br><br>
+                      Last P-day we went to NASA!! It was so legit. But they weren't letting anyone see Mission Control because of COVID so that was pretty sad but we still got to see some cool rockets and where they train astronauts and build robots. 
+                      <br><br>
+                      Tuesday our lesson with our friend Jenny fell through. :( but then we walked over to the snack shop and I got some corn and Hermana Koopmans got some fruit. We went to give our new friend Willie a Book of Mormon and he is the cutest old black guy ever! He sends us texts every morning when he goes out by the ocean to read his Bible and now his Book of Mormon! He says "Keep spreading the faith virus Sisters Barton Koopmans good vibes" it's pretty cute lol
+                      <br><br>
+                      Thursday we went and helped at the Galveston County food bank. We didn't realize until that morning that it's actually in Texas City and not on the island so next time the Texas City Elders are going to go there. We stayed for like 3 hours and helped bag produce and sort through yogurt and sweep the floor. My feet hurt by the end. 
+                      <br><br>
+                      Saturday Julianna got baptized! She was so nervous, but she was dedicated to making a promise with God to follow Him and keep His commandments! Everything went relatively smoothly except that the Zoom didn't end up happening... I was pretty upset about that because we had sent the link to a lot of people, but our bishop thought the Zoom was just to show the baptism on a TV in the chapel if we all couldn't fit in the Relief Society room. So next time there's a baptism, we'll make sure that the Zoom actually goes. 😅
+                      <br><br>
+                      Julianna was baptized by Bishop Bills! After she got baptized she shared her testimony about the commandments and how we're all family! She is so sweet. Her dad had to work both Saturday and Sunday, but her siblings Joey (16) and Sharrae (7) were able to come. Her mom is not in the picture. We are so grateful for all of the members of the ward here in Galveston for helping Julianna make it to this point!! 
+                      <br><br>
+                      On Sunday Julianna received the Gift of the Holy Ghost! In the blessing she got, it talked about how the spirit would help her with her school work and that she would be able to serve a mission if she desired. I was crying! Julianna just seems so much more peaceful and just whole now that she has the Holy Ghost. I am so proud of her. 
+                      <br><br>
+                      Spiritual Thought:
+                      <br><br>
+                      Alma 36:27
+                      <br><br>
+                      27 And I have been supported under trials and troubles of every kind, yea, and in all manner of afflictions; yea, God has delivered me from prison, and from bonds, and from death; yea, and I do put my trust in him, and he will still deliver me.
+                      <br><br>
+                      This verse struck me this week. I have been trying to trust more in God lately. With the end of my mission looming ever closer with every passing day, I tend to get a little distracted trying to think and plan out what my life will be like after the mission and all the things that I am going to do and how I'm going to find a husband and how I'm going to be successful in school and find a good job and graduate and everything, but I just need to focus on what I have been called to do out here in Galveston. I need to trust that God will deliver me and support me, just like he has throughout my entire life. 
+                      <br><br>
+                      Les quiero! 
+                      <br><br>
+                      Love y'all! 
+                      <br><br>
                     </p>
                 </div>
             </div>
@@ -95,7 +128,7 @@
 </div>
 
 
-  <footer>
+ <footer>
     <a style="margin-right: auto;" href="https://github.com/lucymbarton/creative-project-1">Github</a>
     <a href="/index.html">Home </a>
     <a href="mtc.html"> MTC </a>
@@ -103,6 +136,8 @@
     <a href="manvel.html"> Manvel </a>
     <a href="sealy.html"> Sealy </a>
     <a href="galveston.html"> Galveston </a>
+    <a href="mocity.html">Missouri City</a>
+    <a href="jcgm.html">Jones Creek/Grand Mission</a>
   </footer>
 
 
