--- a/pages/galvestonWeeks/week49.html
+++ b/pages/galvestonWeeks/week49.html
@@ -36,6 +36,12 @@
           <li class="nav-item">
             <a class="nav-link" href="/pages/galveston.html">Galveston <span class="sr-only">(current)</span></a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/pages/mocity.html">Missouri City </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/pages/jcgm.html">Jones Creek/Grand Mission </a>
+          </li>
           
       </ul>
     </div>
@@ -69,7 +75,39 @@
             <div class="weekPart">
                      <div class="email">
                     <p>
-
+                      Buenos días a todos! 
+                      <br><br>
+                      This week was good!! I hit 11 months! I feel like I have been a missionary forever, but I also feel like I just left like 3 weeks ago. Weird. 
+                      <br><br>
+                      Last P-day was pickleball and Chick-fil-A again! Fun times. We have a new Elder in our district named Elder Thomasson, and he is the same age as Elders Ferrin and Teeples, which makes me both the oldest person and the missionary who has been out the longest in the district. 🧓🏻🙃
+                      <br><br>
+                      Wednesday at district council we had to do a role play where we "texted a media referral" who was actually President Heaton and it was funny and confusing lol. Sister White made us some shrimp curry for dinner and it was the best thing I have ever eaten. (okay maybe not THE best thing but it was pretty good) 
+                      <br><br>
+                      Thursday was my 11 month mark! There was a Valentine's Day relief society activity and we got two people that we are teaching to come! Jess and Jenny. We decorated cookies, made oragami, and made cute valentines cards. :) Then Hermana Koopmans bought me a hot fudge sundae from McDonald's to celebrate my 11 months. It was a pretty good day! 
+                      <br><br>
+                      Friday we were supposed to have exchanges but then our SIM card stopped working because apparently AT&T changed their network to only support lte/4g/5g or something and my phone is too old to do that. So we decided not to do exchanges and we had to do all of our work through Facebook Messenger and asking the Elders to send text messages for us lol. Then we drove out to the Texas City Buccees and the Office Elders met us there with a new SIM card. 
+                      <br><br>
+                      Saturday, a cute 15 year old girl that the Elders have been teaching, Alayzia, was baptized! She is so amazing and she shared her testimony afterwards about how she has felt the Holy Ghost. It was so good! I had to lead the music for the service and I did not do very well but nobody was looking at me anyways lol. Our friends Frederick and Emma were able to come watch the baptism with us. 
+                      <br><br>
+                      Also on Saturday, we had like 3 different members give us food so it was a good day :) 
+                      <br><br>
+                      We had a good Valentines day! A few members gave us little treats and cards. We started teaching this lady this week named Linda who has referred herself multiple times but never answered us until now. She seems pretty cool with a lot of potential and she wants to Let God Prevail! 
+                      <br><br>
+                      It snowed last night! Apparently that has not happened here in Galveston since the 80s. But it's supposed to be freezing temps until Wednesday so we're not allowed to leave the apartment, but we're especially not allowed to drive. If only someone would let these people down here know how to salt the roads! 
+                      <br><br>
+                      Spiritual Thought:
+                      <br><br>
+                      Romans 6:23
+                      <br><br>
+                      23 For the wages of sin is death; but the gift of God is eternal life through Jesus Christ our Lord.
+                      <br><br>
+                      I'm feeling a little Christmas-y with all the snow on the ground... But I am forever grateful for the gift that our Heavenly Father gave us of His Son Jesus Christ. I am so glad that I know that I have a Savior and Redeemer. I love how I have the Book of Mormon as another witness of Him. I cannot deny that He lives and that He died for us to save us from sin and death. And I am eternally indebted to Him. 
+                      <br><br>
+                      Les quiero
+                      <br><br>
+                      Love y'all! 
+                      <br><br><br>
+                      Hermana Barton
                     </p>
                 </div>
             </div>
@@ -95,7 +133,7 @@
 </div>
 
 
-  <footer>
+ <footer>
     <a style="margin-right: auto;" href="https://github.com/lucymbarton/creative-project-1">Github</a>
     <a href="/index.html">Home </a>
     <a href="mtc.html"> MTC </a>
@@ -103,6 +141,8 @@
     <a href="manvel.html"> Manvel </a>
     <a href="sealy.html"> Sealy </a>
     <a href="galveston.html"> Galveston </a>
+    <a href="mocity.html">Missouri City</a>
+    <a href="jcgm.html">Jones Creek/Grand Mission</a>
   </footer>
 
 
