--- a/pages/galvestonWeeks/week50.html
+++ b/pages/galvestonWeeks/week50.html
@@ -36,6 +36,12 @@
           <li class="nav-item">
             <a class="nav-link" href="/pages/galveston.html">Galveston <span class="sr-only">(current)</span></a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/pages/mocity.html">Missouri City </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/pages/jcgm.html">Jones Creek/Grand Mission </a>
+          </li>
           
       </ul>
     </div>
@@ -69,7 +75,33 @@
             <div class="weekPart">
                      <div class="email">
                     <p>
-
+                      Buenos días. 
+                      <br><br>
+                      We had a pretty eventful week out here. It started last Monday when it snowed about 0.2 inches of ice pellets and then freezing temperatures continued until about Thursday. Apparently the power companies were not prepared for the cold spell and a lot of people lost power and a lot of pipes froze and burst and so a lot of people lost water and if they did have water it was contaminated. The stores were closed for a while because they didn't have water and there was no gas on the whole island! They had to shut water off to the entire island because the water pressure was getting too low and they were really concerned about having water at the hospital. So pretty eventful week! 
+                      <br><br>
+                      We were not allowed to drive or bike anywhere until Thursday. Luckily, we never lost power. We lost running water for about a day and we didn't have hot water for about 3 days. So we had to get a little creative. We put our trash can outside under the edge of the roof so we could catch some rain water to flush our toilet with. We had to boil water to wash our dishes with. And I had to take two showers out of a bowl with water that we heated up on the stove. Not something I expected to do while out here, but not necessarily an unpleasant experience. 
+                      <br><br>
+                      President Guthrie and Sister Guthrie's baby was born on the 19th! Her name is Lucy Grace Guthrie. They named her after me. She is so precious! 
+                      <br><br>
+                      I made a yummy salad this week with apples and strawberries and blue cheese. And I made a colorful curry. 
+                      <br><br>
+                      Julianna is doing really well! The devil was working on her, but she has figured out how to really let the Holy Ghost help her! She told us that she was reading the Book of Mormon by candlelight this week when they didn't have power at their house! I love her!! 
+                      <br><br>
+                      We are very blessed and now I am very inspired to make sure I always have some food and water stored away just in case a 3 day long freeze shuts down the entire world! 
+                      <br><br>
+                      Spiritual Thought:
+                      <br><br>
+                      Helaman 5:8
+                      <br><br>
+                      8 And now my sons, behold I have somewhat more to desire of you, which desire is, that ye may not do these things that ye may boast, but that ye may do these things to lay up for yourselves a treasure in heaven, yea, which is eternal, and which fadeth not away; yea, that ye may have that precious gift of eternal life, which we have reason to suppose hath been given to our fathers.
+                      <br><br>
+                      It is really important to evaluate the motives that we have behind our actions. When we serve others, are we doing it out of Christ-like love, or are we doing it just so that others can see us doing it? Yes, it's good to do service either way, but it will only benefit and bless us eternally if we have true charity. I know when I first came on a mission, I didn't really want to come just to serve others or just to draw closer to my Savior, and that's probably what made it hard in the beginning, but as I come to know Him more, I want to serve Him and His children more. 
+                      <br><br>
+                      Les quiero
+                      <br><br>
+                      Love y'all
+                      <br><br><br>
+                      Hermana Barton
                     </p>
                 </div>
             </div>
@@ -95,7 +127,7 @@
 </div>
 
 
-  <footer>
+ <footer>
     <a style="margin-right: auto;" href="https://github.com/lucymbarton/creative-project-1">Github</a>
     <a href="/index.html">Home </a>
     <a href="mtc.html"> MTC </a>
@@ -103,6 +135,8 @@
     <a href="manvel.html"> Manvel </a>
     <a href="sealy.html"> Sealy </a>
     <a href="galveston.html"> Galveston </a>
+    <a href="mocity.html">Missouri City</a>
+    <a href="jcgm.html">Jones Creek/Grand Mission</a>
   </footer>
 
 
