--- a/pages/galvestonWeeks/week51.html
+++ b/pages/galvestonWeeks/week51.html
@@ -36,6 +36,12 @@
           <li class="nav-item">
             <a class="nav-link" href="/pages/galveston.html">Galveston <span class="sr-only">(current)</span></a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/pages/mocity.html">Missouri City </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/pages/jcgm.html">Jones Creek/Grand Mission </a>
+          </li>
           
       </ul>
     </div>
@@ -69,7 +75,35 @@
             <div class="weekPart">
                      <div class="email">
                     <p>
-
+                      Buenos dias!
+                      <br><br>
+                      Another fast week.
+                      <br><br>
+                      Last P-day we played spikeball with the district and my dad gave me money to buy everyone donuts and kolaches! Fun times.
+                      <br><br>
+                      On Tuesday, we went over to Sister White's apartment and she invited Sister Purdum and Sister Sunseri over and we shared a message with all of them. They all three are divorced women in their 50s or 60s. We shared Doctrine and Covenants 18:10-16 and somehow ended up in a conversation about pornography and everything that kids are exposed to today that creates misunderstandings about the sacredness of sex. Not where we expected the lesson to go, but it was a good lesson nonetheless. 
+                      <br><br>
+                      Thursday we had Zone Conference! It was so good! We talked about conversion and asking inspired questions! Hermana Koopmans and I had to do a role play with President Guthrie and we got some good feedback on our teaching and my question-asking has already improved! After the conference, we had interviews again. I love President Guthrie. Zone Conference can be really exhausting, waking up early and sitting in a hard chair all day, so I went to bed that night tired, but enthused to do the work.
+                      <br><br>
+                      Friday morning we got to go to the Seeding Galveston garden. The baby goats that were born last week's mom died :( so they're having to bottle-feed them. We got to feed the two baby goats and it was so cute! But we got peed on! 
+                      <br><br>
+                      Saturday was a day called "A Day of Love and Service" so we set up a lot of service activities to do. We went to the garden, mopped Sister McBride's floor, and weeded Sister Ferrin's flower beds. It was really fun to be with the members and listen to their stories! 
+                      <br><br>
+                      Yesterday I had to speak in Spanish Sacrament Meeting! I spoke about testimony and shared a few scriptures from the Book of Mormon. Jacob 7:12, Alma 5:48, and Alma 34:8.
+                      <br><br>
+                      Spiritual Thought:
+                      <br><br>
+                      3 Nephi 18:32
+                      <br><br>
+                      32 Nevertheless, ye shall not cast him out of your synagogues, or your places of worship, for unto such shall ye continue to minister; for ye know not but what they will return and repent, and come unto me with full purpose of heart, and I shall heal them; and ye shall be the means of bringing salvation unto them.
+                      <br><br>
+                      We've been sharing with a lot of our members about the worth of souls. I know that our Heavenly Father loves each and every one of us so much more than we can imagine. He is always there for us, even when we don't want Him to be. He is always there waiting for us to turn to Him, and then He will heal us. My favorite part of the verse is "I shall heal them". I know that life is hard and we all go through experiences that hurt us, but I know that through the grace and power of Jesus Christ and the love of our Heavenly Father, we can be healed. It takes humility to turn to them, but the reward is eternal glory! 
+                      <br><br>
+                      Les quiero
+                      <br><br>
+                      Love yall
+                      <br><br><br>
+                      Hermana Barton
                     </p>
                 </div>
             </div>
@@ -95,7 +129,7 @@
 </div>
 
 
-  <footer>
+ <footer>
     <a style="margin-right: auto;" href="https://github.com/lucymbarton/creative-project-1">Github</a>
     <a href="/index.html">Home </a>
     <a href="mtc.html"> MTC </a>
@@ -103,6 +137,8 @@
     <a href="manvel.html"> Manvel </a>
     <a href="sealy.html"> Sealy </a>
     <a href="galveston.html"> Galveston </a>
+    <a href="mocity.html">Missouri City</a>
+    <a href="jcgm.html">Jones Creek/Grand Mission</a>
   </footer>
 
 
