--- a/pages/galvestonWeeks/week52.html
+++ b/pages/galvestonWeeks/week52.html
@@ -36,6 +36,12 @@
           <li class="nav-item">
             <a class="nav-link" href="/pages/galveston.html">Galveston <span class="sr-only">(current)</span></a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/pages/mocity.html">Missouri City </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/pages/jcgm.html">Jones Creek/Grand Mission </a>
+          </li>
           
       </ul>
     </div>
@@ -69,7 +75,35 @@
             <div class="weekPart">
                      <div class="email">
                     <p>
-
+                      Buenos Días!
+                      <br><br>
+                       This week was amazing. Last P day we tried to go fishing with the  district but it didn't really work out lol no one caught anything. We  went to this restaurant called Shrimp N Stuff and it was SO good.
+                       <br><br>
+                       Tuesday we saw the biggest miracle. I still can't even believe that it  really happened. We have been meeting with a member's roommate named  Andrea for only the past couple weeks. She is Spanish speaking and she  moved here from Colombia 2 years ago. We had a lesson about the Book  of Mormon and we gave her a copy. She told us on Tuesday that after we  gave her the book, she prayed to know if it was something that she  should read. She prayed for God to give her a sign or some revelation  for her to know that it was His plan for her. And then that day she  saw a video from our church on Facebook. "No lo busque!" she said. "I  didn't search for it!" It was the answer to her prayer! So that night  she started reading the Book of Mormon starting with the introduction,  which we had invited her to read, and then she read through the  testimony of the 3 witnesses, testimony of the 8 witnesses, AND the  testimony of Joseph Smith! She said that she knew that it was true and  that so many things had pointed her to our church and to the Book of  Mormon and that she wanted to be baptized! Hermana Koopmans and I  couldn't even believe what was happening! We couldn't believe that we  could be witnesses to such a great miracle. Truly it is His work and  we are just like little babies that he allows to be here. I am humbled  and trying to be the best instrument that I can be in His hands. We  went back on Saturday and she set her date for April 23rd. Andrea is  ready and willing to Let God Prevail.
+                       <br><br>
+                       TLDR: Andrea got a miraculous witness of the Book of Mormon and she  wants to be baptized in April!
+                       <br><br>
+                       Friday we had exchanges. I stayed here in Galveston and Sister Warren  came out to be with me for the day. We taught a lot of member lessons  and all of our non-member lessons fell through, but we went walking  near a member's house and we gave a Book of Mormon to a kinda scary  guy with only one tooth. Sister Warren was trying to explain to him  what the Book of Mormon is and he was like "How old are yall? And you  think you know more than me a 58 year old man?" And we were like "No  sir!" And we tried to get away as fast as we could. Also the Panda  Express on the island finally opened on Friday!!! We went in and they  gave us flower leis to celebrate their first day being open. It was a  good day.
+                       <br><br>
+                       Saturday we taught our English Class for the first time. We had four  men come and they were all so nice! Jose, Ronald, William, and Bayron.  We went over the English alphabet and how to ask someone for their  name and how to spell your name. Hermana Koopmans and I were really  nervous about it, but it turned out really well and it was really fun!
+                       <br><br>
+                       Sunday we got Terry and Kimberly at church. Our ward is doing Sunday  School and other classes on zoom now after church. Andrea was able to  get on the Spanish Sunday school which the Elders taught and she  really enjoyed it! And she got to meet some of the Spanish speaking  members of the ward! That class was miraculous too.
+                       <br><br>
+                       I will hit one year on the mission this Thursday. I cannot believe  that I have already been out for that long. The first few months of my  mission seemed like a million years, but now I still feel like I just  left home a few months ago. I'm really trying to soak up all of the  time and experiences that I am having as a full time missionary.
+                       <br><br>
+                       Spiritual Thought:
+                       <br><br>
+                       Alma 26:12
+                       <br><br>
+                       12 Yea, I know that I am nothing; as to my strength I am weak;  therefore I will not boast of myself, but I will boast of my God, for  in his strength I can do all things; yea, behold, many mighty miracles  we have wrought in this land, for which we will praise his name forever.
+                       <br><br>
+                       I have been taken to pondering lately on the nothingness of man. I  reflect back to a year ago, the night before I was to leave on my  mission, laying in bed crying and sobbing and wondering how on earth I  was going to leave and why on earth I was supposed to do this. It was  so overwhelming and seemed absolutely impossible. I thought about just  giving up and not going. I wished I could just stop existing so I  wouldn't have to be so anxious anymore. But deep down I knew that God  would support me. I prayed to know what I should do and He told me  that He was there and that He would never leave me no matter what  happened. It has been really hard to be a missionary and I would never  want to go through it again, but I am eternally grateful for all that  I have learned and how much I have grown. He knows me and I am certain  that He is preparing me for the rest of my life.
+                       <br><br>
+                       Les quiero
+                       <br><br>
+                       Love yall!
+                       <br><br><br>
+                       Hermana Barton
                     </p>
                 </div>
             </div>
@@ -95,7 +129,7 @@
 </div>
 
 
-  <footer>
+ <footer>
     <a style="margin-right: auto;" href="https://github.com/lucymbarton/creative-project-1">Github</a>
     <a href="/index.html">Home </a>
     <a href="mtc.html"> MTC </a>
@@ -103,6 +137,8 @@
     <a href="manvel.html"> Manvel </a>
     <a href="sealy.html"> Sealy </a>
     <a href="galveston.html"> Galveston </a>
+    <a href="mocity.html">Missouri City</a>
+    <a href="jcgm.html">Jones Creek/Grand Mission</a>
   </footer>
 
 
