--- a/pages/galvestonWeeks/week53.html
+++ b/pages/galvestonWeeks/week53.html
@@ -36,6 +36,12 @@
           <li class="nav-item">
             <a class="nav-link" href="/pages/galveston.html">Galveston <span class="sr-only">(current)</span></a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/pages/mocity.html">Missouri City </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/pages/jcgm.html">Jones Creek/Grand Mission </a>
+          </li>
           
       </ul>
     </div>
@@ -69,7 +75,31 @@
             <div class="weekPart">
                      <div class="email">
                     <p>
-
+                      Buenos días! Como están? 
+                      <br><br>
+                      A year has gone by and I still feel like a new missionary sometimes. But I am trying to come to terms with the fact that it will all end and I actually will go home. It's a strange thought since I always thought 18 months would never go by. 
+                      <br><br>
+                      This week was fun! Last Monday we played more pickleball and we went to a candy store on the Strand (touristy part of Galveston). 
+                      <br><br>
+                      Tuesday we taught Andrea the first part of the plan of salvation. We read Jeremiah 1:5 and explained the premortal life. She said she had never thought about it before but that it made a lot of sense! She said it clarified another Bible verse that she had always wondered about! 
+                      <br><br>
+                      Wednesday I brought banana muffins to district council. Elder Peterson audited my calculator during device audits and was disappointed to see I had to put in 20*4 lol. There was a maintance man at the church fixing a gas leak and he had to turn the heat on all the way up while we were at district council so that he could find the leak. It was very warm, but the good news is that the gas leak is fixed. 
+                      <br><br>
+                      Thursday I hit 1 year on the mission!!! It was MLC so I spent the day with Sister Warren in South Shore. We talked to a kooky member who told us a lot of stories. We sat on her porch and I got a watch tan line. We also did exchanges so I went back to Galveston with Sister Geertsen and we went to Panda Express to celebrate my year. 
+                      <br><br>
+                      Friday we went to the garden and raked some leaves and for lunch we went to Shrimp 'N' Stuff. Then we taught Terry the ten commandments and exchanged back. 
+                      <br><br>
+                      Saturday we taught our English class again! Only 2 people came, but it was still fun. We taught them how to say "How are you?" "Where are you from?" and "Bye. See you later!" 
+                      <br><br>
+                      Sunday, Frederick came to church and Terry watched church online. The talks were about Charity and love. All of our lessons fell through, so we made some cookies and took them to some of the members who have been helping us out a bunch. It was fun to stop by all of their houses. 
+                      <br><br>
+                      Our recent convert Julianna has been struggling lately with some mental health challenges. Prayers on her behalf would be very much appreciated! 
+                      <br><br>
+                      Love yall
+                      <br><br>
+                      Les quiero
+                      <br><br><br>
+                      Hermana Barton
                     </p>
                 </div>
             </div>
@@ -95,7 +125,7 @@
 </div>
 
 
-  <footer>
+ <footer>
     <a style="margin-right: auto;" href="https://github.com/lucymbarton/creative-project-1">Github</a>
     <a href="/index.html">Home </a>
     <a href="mtc.html"> MTC </a>
@@ -103,6 +133,8 @@
     <a href="manvel.html"> Manvel </a>
     <a href="sealy.html"> Sealy </a>
     <a href="galveston.html"> Galveston </a>
+    <a href="mocity.html">Missouri City</a>
+    <a href="jcgm.html">Jones Creek/Grand Mission</a>
   </footer>
 
 
