--- a/pages/h8.html
+++ b/pages/h8.html
@@ -34,7 +34,12 @@
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/pages/galveston.html">Galveston</a>
-        </li>
+        </li><li class="nav-item">
+            <a class="nav-link" href="/pages/mocity.html">Missouri City </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/pages/jcgm.html">Jones Creek/Grand Mission </a>
+          </li>
       </ul>
     </div>
   </nav>
@@ -140,6 +145,8 @@
     <a href="manvel.html"> Manvel </a>
     <a href="sealy.html"> Sealy </a>
     <a href="galveston.html"> Galveston </a>
+    <a href="mocity.html">Missouri City</a>
+    <a href="jcgm.html">Jones Creek/Grand Mission</a>
   </footer>
 
 
