--- a/index.html
+++ b/index.html
@@ -34,7 +34,12 @@
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/pages/galveston.html">Galveston</a>
-        </li>
+        </li><li class="nav-item">
+            <a class="nav-link" href="/pages/mocity.html">Missouri City </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/pages/jcgm.html">Jones Creek/Grand Mission </a>
+          </li>
       </ul>
     </div>
   </nav>
@@ -67,15 +72,15 @@
           <img src="/images/galvy.jpg"/>
           <h2>Galveston</h2>
         </a></div>
-        <div class="areaTile"><a href="/pages/galveston.html">
+        <div class="areaTile"><a href="/pages/mocity.html">
           <img src="/images/mocity.jpg"/>
           <h2>Missouri City</h2>
         </a></div>
-        <div class="areaTile"><a href="/pages/galveston.html">
+        <div class="areaTile"><a href="/pages/jcgm.html">
           <img src="/images/jcgm.jpg"/>
           <h2>Jones Creek/Grand Mission</h2>
         </a></div>
-        <div class="areaTile"><a href="/pages/galveston.html">
+        <div class="areaTile"><a href="/pages/friendswood.html">
           <img src="/images/friendswood.jpeg"/>
           <h2>Friendswood</h2>
         </a></div>
