--- a/pages/galvestonWeeks/week54.html
+++ b/pages/galvestonWeeks/week54.html
@@ -36,6 +36,12 @@
           <li class="nav-item">
             <a class="nav-link" href="/pages/galveston.html">Galveston <span class="sr-only">(current)</span></a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/pages/mocity.html">Missouri City </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/pages/jcgm.html">Jones Creek/Grand Mission </a>
+          </li>
           
       </ul>
     </div>
@@ -69,7 +75,42 @@
             <div class="weekPart">
                      <div class="email">
                     <p>
-
+                      Buenos días!
+                      <br><br>
+                       This week was so stressful because of transfers! I was feeling burnt  out for a few days, but we made it through. Sadly, on Saturday night  we found out that I was going to be transfered to Missouri City! It  was something that I was not expecting to happen since I had only been  in Galveston for 2 transfers, and usually you'll stay in an area for  at least 3 or 4 transfers. But last week, I was thinking about it and  I thought that I might leave, (probably a prompting from the spirit)  so I was pretty mentally prepared for it. The Missouri City apartment  is in the same complex as the Manvel Hermanas, which is where I was  when I was training, so it will be a little bit like going home!  But... I'm supposed to be companions with Hermana Tea and she and her  companion got exposed to COVID this week and are showing symptoms.  They will get tested today. So for now, I am with Hermana Crandall in  Grand Mission, in an apartment complex that I have done exchanges in  multiple times, so it hasn't been too bad of a transfer experience so  far.
+                       <br><br>
+                       It was hard to leave all of our people in Galveston. When I told Terry  at church that I was leaving, she took her bracelet right off of her  wrist and gave it to me. I cried. Julianna didn't come to church  because Sister White wasn't going to be able to make food for her  after... So I didn't get to see her before I left. And she got mad  when I told her I was leaving. But she is 13 and hopefully she will  get over it soon and talk to the Hermana that is replacing me.
+                       <br><br>
+                       Anyways, last P-day we had sister's P-day with all the sisters in the  zone. We went to a cute Italian restaurant and it was delicious. Then  we went to Super Target and I got a cute pink dress for $15. The only  thing is That it's a pioneer dress. But it was only $15 and it's my  favorite color. So I had to buy it.
+                       <br><br>
+                       Tuesday we taught Andrea the Word of Wisdom and the Law of Chastity.  We were kinda nervous because everything has been going so well with  her that we are just waiting for something to go wrong. But she's  already living both of the commandments! She is so amazing.
+                       <br><br>
+                       Also on Tuesday, we had a crazy lesson with Terry and a recent move-in  member named Sister Barrett. Sister Barrett was baptized when she was  21 and she had a lot of similar experiences to Terry. She told Terry,  "This is the only true church! It has the authority! Do not hesitate!  Get Baptized!" And so Terry said she would like to be baptized on June  20th, her dad's birthday! She will need to work through some Word of  Wisdom struggles, but she got a priesthood blessing at church on  Sunday to help her and we are very hopeful.
+                       <br><br>
+                       Wednesday was St. Patrick's day :) We had district council and  everyone wore green. Elder Ferrin brought banana chocolate chip bread.  We visited Sister McBride and she gave us these little decorative  stone turtles. Then we went and helped Sister Ferrin rake leaves. It  was a good day.
+                       <br><br>
+                       Thursday we finally got to go over to a less-active member Sister  Calderón who has been having a lot of struggles lately. She talked to  us for about an hour about all that has been happening. Sister  Koopmans felt very strongly that we needed to teach her about tithing.  So we did, and she said that it's hard to pay tithing when you don't  know how you're going to pay your bills, but she has seen many  miracles come when she does pay her tithing.
+                       <br><br>
+                       Friday we had to drive up to Manvel! and pick up Hermana Seminario!  She spent the weekend with us. She has been travel training this  transfer, spending a few days with Sisters all over the mission. We  got her for her last 3 days on the mission. She goes home today! She  was trained by my trainer, so we are "Sisters". We taught Terry and  Hermana Lane. That night, Sister Barrett really wanted to feed us, but  we're not allowed to eat with members, but she asked if we could eat  it in the car and we didn't see why not. But she gave us this amazing  steak dinner with peas and quinoa and spinach salad and lemonade on  these big trays and we had to eat it in the car lol.
+                       <br><br>
+                       Saturday, Julianna wanted to have a call and she just told us all of  the things that she has been studying in the Book of Mormon! She said  she Google what the best verses in the Book of Mormon are! She is so  amazing.
+                       <br><br>
+                       Sunday we went to church. Frederick and Terry were there, and Andrea  was able to watch the broadcast! I had to say goodbye to everyone and  pack and we left Galveston at 1:00pm. I'll be back on the island some  day, but I will miss it until then.
+                       <br><br>
+                       I spent the night last night with Hermana Crandall and Sister  Christensen! It was so fun and I'm glad that God has allowed me to be  here with these sisters.
+                       <br><br>
+                       Spiritual thought:
+                       Moroni 7:48
+                       48 Wherefore, my beloved brethren, pray unto the Father with all the  energy of heart, that ye may be filled with this love, which he hath  bestowed upon all who are true followers of his Son, Jesus Christ;  that ye may become the sons of God; that when he shall appear we shall  be like him, for we shall see him as he is; that we may have this  hope; that we may be purified even as he is pure. Amen.
+                       <br><br>
+                       I've been really pondering on this scripture. It basically says that  if we develop the attribute of Charity, the pure love of Christ, we  will be like Him when he comes again. I've been wondering, how can  having that love transform us to be like Him? Maybe it's because when  we love people like He does, we understand how He feels about us and  about our brothers and sisters. I'll let yall know if I figure it out  in my brain.
+                       <br><br>
+                       Love yall
+                       <br><br>
+                       Les quiero
+                       <br><br><br>
+                       Hermana Barton
+                      
                     </p>
                 </div>
             </div>
@@ -95,7 +136,7 @@
 </div>
 
 
-  <footer>
+ <footer>
     <a style="margin-right: auto;" href="https://github.com/lucymbarton/creative-project-1">Github</a>
     <a href="/index.html">Home </a>
     <a href="mtc.html"> MTC </a>
@@ -103,6 +144,8 @@
     <a href="manvel.html"> Manvel </a>
     <a href="sealy.html"> Sealy </a>
     <a href="galveston.html"> Galveston </a>
+    <a href="mocity.html">Missouri City</a>
+    <a href="jcgm.html">Jones Creek/Grand Mission</a>
   </footer>
 
 
