--- a/pages/manvel.html
+++ b/pages/manvel.html
@@ -34,7 +34,12 @@
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/pages/galveston.html">Galveston</a>
-        </li>
+        </li><li class="nav-item">
+            <a class="nav-link" href="/pages/mocity.html">Missouri City </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/pages/jcgm.html">Jones Creek/Grand Mission </a>
+          </li>
       </ul>
     </div>
   </nav>
@@ -144,6 +149,8 @@
     <a href="#"> Manvel </a>
     <a href="sealy.html"> Sealy </a>
     <a href="galveston.html"> Galveston </a>
+    <a href="mocity.html">Missouri City</a>
+    <a href="jcgm.html">Jones Creek/Grand Mission</a>
   </footer>
 
 
