--- a/pages/manvelWeeks/week7.html
+++ b/pages/manvelWeeks/week7.html
@@ -35,7 +35,12 @@
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/pages/galveston.html">Galveston</a>
-        </li>
+        </li><li class="nav-item">
+            <a class="nav-link" href="/pages/mocity.html">Missouri City </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/pages/jcgm.html">Jones Creek/Grand Mission </a>
+          </li>
       </ul>
     </div>
   </nav>
