--- a/pages/mtc.html
+++ b/pages/mtc.html
@@ -35,7 +35,12 @@
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/pages/galveston.html">Galveston</a>
-        </li>
+        </li><li class="nav-item">
+            <a class="nav-link" href="/pages/mocity.html">Missouri City </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/pages/jcgm.html">Jones Creek/Grand Mission </a>
+          </li>
       </ul>
     </div>
   </nav>
@@ -137,14 +142,16 @@
 </div>
 
 
-  <footer>
+<footer>
     <a style="margin-right: auto;" href="https://github.com/lucymbarton/creative-project-1">Github</a>
-    <a href="../index.html">Home </a>
-    <a href="#"> MTC </a>
+    <a href="/index.html">Home </a>
+    <a href="mtc.html"> MTC </a>
     <a href="h8.html"> Houston 8 </a>
     <a href="manvel.html"> Manvel </a>
     <a href="sealy.html"> Sealy </a>
     <a href="galveston.html"> Galveston </a>
+    <a href="mocity.html">Missouri City</a>
+    <a href="jcgm.html">Jones Creek/Grand Mission</a>
   </footer>
 
 
