--- a/pages/sealyWeeks/week26.html
+++ b/pages/sealyWeeks/week26.html
@@ -35,7 +35,12 @@
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/pages/galveston.html">Galveston</a>
-        </li>
+        </li><li class="nav-item">
+            <a class="nav-link" href="/pages/mocity.html">Missouri City </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/pages/jcgm.html">Jones Creek/Grand Mission </a>
+          </li>
       </ul>
     </div>
   </nav>
@@ -156,6 +161,8 @@
     <a href="/pages/manvel.html"> Manvel </a>
     <a href="/pages/sealy.html"> Sealy </a>
     <a href="/pages/galveston.html"> Galveston </a>
+    <a href="/pages/mocity.html">Missouri City</a>
+    <a href="/pages/jcgm.html">Jones Creek/Grand Mission</a>
   </footer>
 
 
